--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     </div>
 
     <div class="weather-body">
-      <img src="/assets/cloud.png" alt="weather Image" class="weather-img" />
+      <img src="cloud.png" alt="weather Image" class="weather-img" />
 
       <div class="weather-box">
         <p class="temperature">0°C</p>
